--- a/404.html
+++ b/404.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AetherIDE — Not Found</title>
+    <meta name="robots" content="noindex">
+    <title>404 — AetherIDE</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&family=JetBrains+Mono:wght@500&display=swap" rel="stylesheet">
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body {
-            font-family: 'Inter', sans-serif;
+            font-family: 'Inter', -apple-system, sans-serif;
             background: #0D0F13;
             color: #E4E7EB;
             height: 100vh;
@@ -15,36 +18,115 @@
             align-items: center;
             justify-content: center;
             text-align: center;
+            overflow: hidden;
         }
-        .container { max-width: 400px; padding: 20px; }
-        h1 {
-            font-size: 4rem;
+        .container { max-width: 440px; padding: 24px; position: relative; z-index: 1; }
+
+        .glow {
+            position: fixed;
+            width: 400px;
+            height: 400px;
+            border-radius: 50%;
+            background: radial-gradient(circle, rgba(108,99,255,0.12) 0%, transparent 70%);
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            animation: pulse 4s ease-in-out infinite;
+            z-index: 0;
+        }
+        @keyframes pulse {
+            0%, 100% { opacity: 0.5; transform: translate(-50%, -50%) scale(1); }
+            50% { opacity: 1; transform: translate(-50%, -50%) scale(1.15); }
+        }
+
+        .error-code {
+            font-size: 6rem;
             font-weight: 800;
             background: linear-gradient(135deg, #6C63FF, #00D9FF);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
-            margin-bottom: 12px;
+            line-height: 1;
+            margin-bottom: 8px;
+            letter-spacing: -2px;
         }
-        p { color: #9DA5B4; font-size: 1rem; margin-bottom: 24px; }
-        a {
+
+        .terminal-line {
+            font-family: 'JetBrains Mono', monospace;
+            font-size: 0.75rem;
+            color: #636D7E;
+            margin-bottom: 20px;
+            padding: 8px 16px;
+            background: rgba(255,255,255,0.03);
+            border: 1px solid rgba(255,255,255,0.06);
+            border-radius: 8px;
             display: inline-block;
-            padding: 12px 28px;
-            background: #6C63FF;
-            color: white;
+        }
+        .terminal-line span { color: #FF5252; }
+
+        p {
+            color: #9DA5B4;
+            font-size: 0.95rem;
+            margin-bottom: 28px;
+            line-height: 1.6;
+        }
+
+        .actions {
+            display: flex;
+            gap: 10px;
+            justify-content: center;
+            flex-wrap: wrap;
+        }
+
+        .btn {
+            display: inline-flex;
+            align-items: center;
+            gap: 8px;
+            padding: 12px 24px;
             border-radius: 10px;
             text-decoration: none;
             font-weight: 600;
-            font-size: 0.9rem;
-            transition: background 0.2s;
+            font-size: 0.85rem;
+            transition: all 0.2s ease;
+            border: none;
+            cursor: pointer;
         }
-        a:hover { background: #7B73FF; }
+        .btn-primary {
+            background: #6C63FF;
+            color: white;
+        }
+        .btn-primary:hover {
+            background: #7B73FF;
+            transform: translateY(-2px);
+            box-shadow: 0 4px 20px rgba(108,99,255,0.3);
+        }
+        .btn-secondary {
+            background: rgba(255,255,255,0.05);
+            color: #9DA5B4;
+            border: 1px solid rgba(255,255,255,0.08);
+        }
+        .btn-secondary:hover {
+            background: rgba(255,255,255,0.08);
+            color: #E4E7EB;
+            transform: translateY(-2px);
+        }
+
+        @media (max-width: 480px) {
+            .error-code { font-size: 4.5rem; }
+            .actions { flex-direction: column; }
+            .btn { justify-content: center; }
+        }
     </style>
 </head>
 <body>
+    <div class="glow"></div>
     <div class="container">
-        <h1>404</h1>
-        <p>This page doesn't exist. Let's get you back to coding.</p>
-        <a href="/">Back to AetherIDE</a>
+        <div class="error-code">404</div>
+        <div class="terminal-line">$ cd /requested-page — <span>Error: path not found</span></div>
+        <p>The page you're looking for doesn't exist or has been moved. Let's get you back to building something amazing.</p>
+        <div class="actions">
+            <a href="/" class="btn btn-primary">⚡ Back to AetherIDE</a>
+            <a href="https://discord.gg/7YKCvPzKEQ" target="_blank" rel="noopener" class="btn btn-secondary">💬 Get Help</a>
+        </div>
     </div>
 </body>
 </html>
