--- a/index.html
+++ b/index.html
@@ -3,8 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <meta name="description" content="AetherIDE — AI-Powered Code Editor">
+    <meta name="description" content="AetherIDE — AI-Powered Code Editor with Team, Planner & Direct modes. Build projects with OpenRouter, Gemini & OpenAI.">
+    <meta name="keywords" content="AI code editor, AI coding, code generator, OpenRouter, Gemini, OpenAI, web IDE, AetherIDE">
+    <meta name="author" content="AetherIDE">
     <meta name="theme-color" content="#0D0F13">
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="AetherIDE — AI-Powered Code Editor">
+    <meta property="og:description" content="Code at the speed of thought. Multi-AI team collaboration, smart planning, and instant code generation.">
+    <meta property="og:image" content="https://aetheride.com/assets/icons/icon-512.png">
+    <meta property="og:url" content="https://aetheride.com">
+    <meta property="og:site_name" content="AetherIDE">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="AetherIDE — AI-Powered Code Editor">
+    <meta name="twitter:description" content="Code at the speed of thought. Multi-AI team collaboration, smart planning, and instant code generation.">
+    <meta name="twitter:image" content="https://aetheride.com/assets/icons/icon-512.png">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="mobile-web-app-capable" content="yes">
@@ -394,7 +410,7 @@
                 </div>
                 <div class="statusbar-right">
                     <span class="statusbar-item" id="statusbar-lines">0 lines</span>
-                    <span class="statusbar-item" id="statusbar-version">v1.3.5</span>
+                    <span class="statusbar-item" id="statusbar-version">v1.4.0</span>
                 </div>
             </div>
         </main>
@@ -882,7 +898,7 @@
                     <div class="settings-about">
                         <img src="assets/icons/icon-192.png" alt="AetherIDE" class="about-logo-img">
                         <div class="about-name">AetherIDE</div>
-                        <div class="about-version">v1.3.5</div>
+                        <div class="about-version">v1.4.0</div>
                         <div class="about-tagline">Code at the speed of thought</div>
                         <div class="about-links">
                             <a href="https://discord.gg/7YKCvPzKEQ" target="_blank" rel="noopener" class="about-link discord-link">
